# Hachimi-Edge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  cliff.toml  clippy.toml  deny.toml  rustfmt.toml  typos.toml
.cargo/: config.toml
.github/workflows/: ci.yml  create_release.yml
.plans/: hachimi-plugin-sdk-alt-a-manifest-codegen.md  hachimi-plugin-sdk-alt-b-split-abi-sdk.md  hachimi-plugin-sdk-alt-c-abi-only-defer-sdk.md  hachimi-plugin-sdk-comparison.md  hachimi-plugin-sdk-consolidated.md  hachimi-plugin-sdk.md
apps/hachimi/: Cargo.toml
apps/hachimi/assets/locales/: en.yml  es-419.yml  es.yml  fil.yml  fr.yml  id.yml  pt-br.yml  pt-pt.yml  vi.yml  zh-cn.yml  zh-tw.yml
apps/hachimi/src/core/: conflicts.rs  error.rs  ipc.rs  mod.rs  sugoi_client.rs  template.rs  template_filters.rs
apps/hachimi/src/il2cpp/: mod.rs  sql.rs  utils.rs
apps/hachimi/src/windows/: hachimi_impl.rs  main.rs  utils.rs
apps/installer/: Cargo.toml  README.md
apps/installer/locales/: en-US.yml  es-419.yml  es-ES.yml  fr-FR.yml  pt-BR.yml  pt-PT.yml  zh-CN.yml  zh-TW.yml
apps/installer/src/: cli.rs  gui.rs  i18n.rs  installer.rs  main.rs  resource.rs  utils.rs
assets/locales/: en.yml  es.yml  fil.yml  id.yml  vi.yml
crates/hachimi-plugin-abi/: Cargo.toml  README.md
crates/hachimi-plugin-abi/src/: init.rs  lib.rs  log.rs  version.rs
crates/hachimi-plugin-abi/tests/: abi_layout.rs
crates/hachimi-plugin-macros/: Cargo.toml
crates/hachimi-plugin-sdk/: Cargo.toml  README.md
crates/hachimi-plugin-sdk/src/: gui.rs  hook.rs  il2cpp.rs  lib.rs  sdk.rs  version.rs
crates/hachimi-telemetry/: Cargo.toml
crates/hachimi-telemetry/proto/hachimi/telemetry/v1/: telemetry.proto
crates/hachimi-telemetry/src/: config.rs  lib.rs
data/: manifest.json
data/gametora/: character-cards.json  evrew.json  manifest.json  skills.json  support-cards.json  support-effects.json  te-names-en.json  te-names-ja.json  training-events-friend.json  training-events-group.json  training-events-shared.json  training-events-sr.json  training-events-ssr.json
docs/: architecture.md  build-and-deployment.md  gametora-data.md  overview.md  patterns.md  plugin-sdk-release.md  plugin-sdk.md  updating-game-data.md
docs/plans/: plugin-sdk-refactor.md
docs/reverse-engineering/: README.md  career-evaluation.md  hachimi-plugin-surface.md  il2cpp-class-map.md  network-protocol.md  qol-opportunities.md  scenario-trackblazer-shop.md  single-mode-architecture.md  smart-training-recommendation.md  support-card-event-chains.md  trainers-legend-g-crossref.md  training-command-preview.md  training-system.md
installer/: .gitignore  build.rs
installer/assets/: installer.rc
installer/locales/: en-US.yml  zh-CN.yml  zh-TW.yml
installer/src/: i18n.rs  installer.rs
plugins/race-hud/: Cargo.toml
plugins/race-hud/src/: lib.rs  state.rs  telemetry.rs  tick.rs
plugins/training-tracker/: AGENTS.md  Cargo.toml  README.md
plugins/training-tracker/assets/: skill_grades.json
plugins/training-tracker/docs/: developing.md
plugins/training-tracker/src/: build_profile.rs  cm_model.rs  config.rs  course_data.rs  diagnostics.rs  eval_data.rs  evaluation.rs  gametora_data.rs  hooks.rs  lib.rs  memory_reader.rs  overlay_cache.rs  overlay_prefs.rs  planner.rs  recommend.rs  skill_shop.rs  telemetry.rs  tracker.rs  ui.rs  vtable.rs
plugins/training-tracker/src/memory_reader/: chain.rs  command_info.rs  eval_master.rs  evaluations.rs  il2cpp.rs  mod.rs  snapshot.rs  support_deck.rs
plugins/training-tracker/src/ui/: bonds.rs  constants.rs  icons.rs  menu.rs  mod.rs  overlay.rs  state.rs  util.rs
scripts/: add-safety-comments.ps1  bump-version.ps1  check-plugin-api.sh  deploy-windows.ps1  gen-skill-grades.mjs  install-hooks.ps1  install-hooks.sh  quality-gates.ps1  quality-gates.sh
src/: lib.rs
src/android/: dex_bridge.rs  game_impl.rs  hachimi_impl.rs  hook.rs  interceptor_impl.rs  log_impl.rs  main.rs  mod.rs  plugin_loader.rs  symbols_impl.rs  utils.rs
src/android/gui_impl/: input_hook.rs  keymap.rs  mod.rs  render_hook.rs
src/android/zygisk/: internal.rs  main.rs  mod.rs
src/core/: game.rs  gui.rs  hachimi.rs  http.rs  interceptor.rs  ipc.rs  log.rs  mod.rs  plugin_api.rs  plurals.rs  template.rs  tl_repo.rs  updater.rs  utils.rs
src/core/gui/: android_keyboard.rs  frame.rs  instance.rs  menu.rs  mod.rs  overlays.rs  theme_preview.rs  update_progress.rs
src/core/gui/window/: about.rs  config_editor.rs  first_time_setup.rs  license.rs  live_vocals_swap.rs  mod.rs  theme_editor.rs
src/core/plugin/: api.rs  menu.rs  mod.rs  notification.rs  overlay.rs  types.rs
src/il2cpp/: api.rs  ext.rs  sql.rs  symbols.rs  types.rs
src/il2cpp/hook/: mod.rs
src/il2cpp/hook/UnityEngine_AssetBundleModule/: AssetBundleRequest.rs
src/il2cpp/hook/UnityEngine_CoreModule/: AsyncOperation.rs  Component.rs  Graphics.rs  Object.rs  QualitySettings.rs  RectOffset.rs  RectTransform.rs  RenderTexture.rs  Resources.rs  Sprite.rs  Texture.rs  Texture2D.rs  TouchScreenKeyboard.rs  TouchScreenKeyboardType.rs  Transform.rs  mod.rs
src/il2cpp/hook/UnityEngine_TextRenderingModule/: Font.rs  TextGenerator.rs
src/il2cpp/hook/UnityEngine_UI/: EventSystem.rs  HorizontalOrVerticalLayoutGroup.rs  Image.rs  LayoutElement.rs  Text.rs  mod.rs
src/il2cpp/hook/UnityEngine_UIModule/: Canvas.rs
src/il2cpp/hook/Unity_RenderPipelines_Universal_Runtime/: ScriptableRenderer.rs
src/il2cpp/hook/Unity_TextMeshPro/: TMP_Text.rs
src/il2cpp/hook/mscorlib/: ArrayList.rs  Byte.rs  (+1 more)
src/windows/: discord.rs  game_impl.rs  hook.rs  interceptor_impl.rs  log_impl.rs  main.rs  mod.rs  steamworks.rs  symbols_impl.rs  wnd_hook.rs
src/windows/gui_impl/: input.rs
src/windows/proxy/: cri_mana_vpx.rs  unityplayer.rs
tools/: README.md
tools/fetch-master-db/: Cargo.toml
tools/fetch-master-db/src/: bsv.rs  main.rs
tools/gametora-sync/: Cargo.toml
tools/gametora-sync/src/: main.rs
tools/skill-grades/: Cargo.toml
tools/skill-grades/src/: main.rs
tools/tracker-data-manifest/: Cargo.toml
tools/tracker-data-manifest/src/: main.rs
(+147 files in other folders)
