[package]
name = "hachimi-plugin-abi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stable C ABI types for Hachimi plugins (Vtable, init, logging macros)"
keywords = ["hachimi", "plugin", "ffi", "abi"]
categories = ["external-ffi-bindings"]
# Distributed via git tags (sdk-vX.Y.Z), not a registry. Block accidental publishes.
publish = false

[lib]
crate-type = ["lib"]

[lints.rust]
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
