[package]
name = "fetch-master-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "fetch-master-db"
path = "src/main.rs"

[dependencies]
ureq = "3.2.0"
serde_json = "1.0"
lz4_flex = { version = "0.11", default-features = false, features = ["std", "frame"] }
sha1 = "0.10"
