[package]
name = "gametora-sync"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "gametora-sync"
path = "src/main.rs"

[dependencies]
ureq = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
blake3 = "1.5"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
