[package]
name = "skill-grades"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "skill-grades"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
csv = "1.3"
ureq = "3.2.0"
rusqlite = { version = "0.32", features = ["bundled"] }
